implement user registration with token, user activation, and add trasactional operation to some of the method in the service layer
